; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/tegra/extr_bpmp-tegra186.c_tegra186_bpmp_channel_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/tegra/extr_bpmp-tegra186.c_tegra186_bpmp_channel_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_bpmp_channel = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_bpmp_channel*)* @tegra186_bpmp_channel_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra186_bpmp_channel_reset(%struct.tegra_bpmp_channel* %0) #0 {
  %2 = alloca %struct.tegra_bpmp_channel*, align 8
  store %struct.tegra_bpmp_channel* %0, %struct.tegra_bpmp_channel** %2, align 8
  %3 = load %struct.tegra_bpmp_channel*, %struct.tegra_bpmp_channel** %2, align 8
  %4 = getelementptr inbounds %struct.tegra_bpmp_channel, %struct.tegra_bpmp_channel* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @tegra_ivc_reset(i32 %5)
  br label %7

7:                                                ; preds = %13, %1
  %8 = load %struct.tegra_bpmp_channel*, %struct.tegra_bpmp_channel** %2, align 8
  %9 = getelementptr inbounds %struct.tegra_bpmp_channel, %struct.tegra_bpmp_channel* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @tegra_ivc_notified(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %7
  br label %7

14:                                               ; preds = %7
  ret void
}

declare dso_local i32 @tegra_ivc_reset(i32) #1

declare dso_local i64 @tegra_ivc_notified(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
